Add the dynamic config for the topic /hk_camera/image_raw_down

--- a/cfg/camera.cfg
+++ b/cfg/camera.cfg
@@ -42,4 +42,7 @@ gen.add("stop_grab", bool_t, 0, "Stop camera grabbing", False)
 # Take Photo
 gen.add("take_photo", bool_t, 0, "Take photo", False)
 
+# Low Fps Topic
+gen.add("is_fps_down", bool_t, 0, "Low fps topic", True)
+
 exit(gen.generate(PACKAGE, "hk_camera", "Camera"))
